--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <ul>
                                 <li><a class="nav" class="nav-link js-scroll-trigger" href="#ah">3.1. Cabeçalho de Autenticação</a></li>
                                 <li><a class="nav" class="nav-link js-scroll-trigger" href="#esp">3.2. Encapsulamento de Dados de Segurança</a></li>
-                                <a class="nav" class="nav-link js-scroll-trigger" href="#ike">3.3. Troca de Chaves da Internet</a></li>
+                                <li><a class="nav" class="nav-link js-scroll-trigger" href="#ike">3.3. Troca de Chaves da Internet</a></li>
                                 <ul>
                                     <li><a class="nav" class="nav-link js-scroll-trigger" href="#sa-ike">3.3.1. Fase 1</a></li>
                                     <li><a class="nav" class="nav-link js-scroll-trigger" href="#sa-ipsec">3.3.2. Fase 1</a></li>
